--- a/app/src/main/assets/www/index.html
+++ b/app/src/main/assets/www/index.html
@@ -3,7 +3,6 @@
 	<head>
 	    <meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-	    <title>PSHS Grade Calculator</title>
 	    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	    <link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
@@ -12,10 +11,10 @@
 			<div class="menu-content invis">
 				<div>
 					<div class="toggles">
-						<div class="toggle" id="c_nm"><span>night mode</span></div>
-						<div class="toggle" id="c_cm"><span>cgpa mode (beta)</span></div>
+						<div class="toggle" id="c_nm">night mode <span>off</span></div>
+						<div class="toggle" id="c_units">units <span>off</span></div>
 					</div>
-					<p id="by">Release 5 by <strong><a href="https://aureljared.tk" title="">@aureljared</a></strong> based on the <strong><a href="http://pshs.edu.ph/curriculum/" title="">pshs subject matrix</a></strong></p>
+					<p id="by"><strong>Release <span id="vc">5</span></strong> by <strong><a href="https://aureljared.tk" title="">@aureljared</a></strong> based on the <strong><a href="http://pshs.edu.ph/curriculum/" title="">pshs subject matrix</a></strong></p>
 					<p style="margin: 0">reload icon by <strong><a href="http://www.flaticon.com/authors/freepik" title="" target="_blank">freepik</a></strong>, lock icons by <strong><a href="http://www.flaticon.com/authors/Madebyoliver" title="">Madebyoliver</a></strong></p>
 				</div>
 			</div>
